--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@
 *.app
 *.hex
 
+# scripts
+*.sh
+
 # Debug files
 *.dSYM/
 *.su
@@ -44,6 +47,7 @@
 
 # Text editor remnants
 *.swp
+.vscode
 .vscode/*
 
 # General project-specific ignores
