Mitigate Redundant Copying
## Moved buffer size to a #define
## Audio data is now synthesized directly into the DSP Buffer when possible
## Audio thread now waits for the DSP Buffer to be ready before playing, which should eliminate dropped audio buffers.
## update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,13 @@
 
 # scripts and script support
 *.sh
-/build_flag_log.txt
+/build_flags.txt
+/build_scripts
+/build_scripts/*
+
+# logging
+/build_logs
+/build_logs/*
 
 # Debug files
 *.dSYM/
